[workspace]

resolver = "2"
members = [
    # binary crates
    "crates/minecrium_main",

    # library crates
    "crates/minecrium_common",
    "crates/minecrium_macro_utils",

    # proc-macro crates
    "crates/minecrium_common_macros",
]

[workspace.package]
authors = ["HYF"]
edition = "2021"
version = "0.1.0"
description = "minecraft clone in rust + bevy"
categories = ["games"]
keywords = ["game", "minecraft"]
readme = "README.md"
repository = "https://github.com/HyfLink/minecrium"
homepage = "https://github.com/HyfLink/minecrium"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[workspace.dependencies]
# dependencies.proc-macro
proc-macro2 = { version = "1.0.56" }
quote = { version = "1.0.27" }
syn = { version = "2.0.15", features = ["full"] }
# dependencies.bevy
bevy = { version = "0.10.1", features = ["dynamic_linking", "serialize"] }
bevy_utils = { version = "0.10.1" }
# dependencies.serde
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
# dependencies.other
rand = { version = "0.8.5", features = ["serde"] }
cgmath = { version = "0.18.0", features = ["rand", "serde"] }
indexmap = { version = "1.9.3", features = ["std", "serde"] }
once_cell = { version = "1.17.1" }
toml_edit = { version = "0.19.8", features = ["serde"] }

[workspace.metadata]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
