[workspace]

resolver = "2"
members = [
    # binary crates
    "crates/minecrium_main",

    # libcrium crates
    "crates/libcrium_core",
    "crates/libcrium_core_macros",
]

[workspace.package]
authors = ["HYF"]
edition = "2021"
version = "0.1.0"
description = "minecraft clone in rust + bevy"
categories = ["games"]
keywords = ["game", "minecraft"]
readme = "README.md"
repository = "https://github.com/HyfLink/minecrium"
homepage = "https://github.com/HyfLink/minecrium"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[workspace.dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "serialize"] }
cgmath = { version = "0.18.0", features = ["serde"] }
proc-macro2 = { version = "1.0.56" }
quote = { version = "1.0.27" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
syn = { version = "2.0.15", features = ["full"] }

[workspace.metadata]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
