[workspace]

resolver = "2"
members = [
    # binary crates
    "crates/minecrium_main",

    # libcrium crates
    "crates/libcrium_core",
    "crates/libcrium_core_macros",
    "crates/libcrium_block",
    "crates/libcrium_block_macros",
    "crates/libcrium_chunk",
]

[workspace.package]
authors = ["HYF"]
edition = "2021"
version = "0.1.0"
description = "minecraft clone in rust + bevy"
categories = ["games"]
keywords = ["game", "minecraft"]
readme = "README.md"
repository = "https://github.com/HyfLink/minecrium"
homepage = "https://github.com/HyfLink/minecrium"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[workspace.dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "serialize"] }
cgmath = { version = "0.18.0", features = ["serde"] }
proc-macro2 = { version = "1.0.60" }
quote = { version = "1.0.28" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97" }
syn = { version = "2.0.18", features = ["full"] }

[workspace.metadata]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
