[package]
name = "libcrium_block"
description = "the minecrium block library"
authors.workspace = true
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy.workspace = true
serde.workspace = true
libcrium_core.path = "../libcrium_core"
