[package]
name = "libcrium_core"
description = "the minecrium core library"
authors.workspace = true
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy.workspace = true
cgmath.workspace = true
serde.workspace = true
libcrium_core_macros.path = "../libcrium_core_macros"
