[package]
name = "minecrium_common"
description = "the fundamental crate for the minecrium"

authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy_utils.workspace = true
cgmath.workspace = true
serde.workspace = true

minecrium_common_macros.path = "../minecrium_common_macros"

[dev-dependencies]
serde_json.workspace = true
