[package]
workspace = "../../"
name = "minecrium_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
serde.workspace = true

minecrium_core_macros.path = "../minecrium_core_macros"
