[package]
name = "minecrium_macro_utils"
description = "utilities for minecrium proc-macro crates"

authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
test = false
doctest = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

once_cell.workspace = true
toml_edit.workspace = true

